@@ -85,6 +85,19 @@ check network.connect "socket" {
   network = "tcp6"                          # optional (default = tcp)
 }
 
+# Scans a range of ports and alerts if any are unexpectedly open
+check network.portscan "open ports" {
+  address = "hostname"
+  network = "tcp6"                          # optional (default = tcp)
+
+  start = 1                                 # optional (default = 1)
+  end = 1024                                # optional (default = 65535)
+  allow = [80, 443]                         # optional (default = [])
+
+  concurrent_connections = 200              # optional (default = 100)
+  connection_timeout = 3s                   # optional (default = 5s)
+}
+
 # ---------------------------------------------------------------------------------------------------------------------
 # Pushover plugin
 # ---------------------------------------------------------------------------------------------------------------------
